k8s/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: coach-app-db
  namespace: coach-app
spec:
  type: ClusterIP
  selector:
    app: coach-app-db
  ports:
    - port: 5432
      targetPort: 5432
