k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-frontend
  namespace: coach-app
spec:
  type: ClusterIP
  selector:
    app: my-frontend
  ports:
    - port: 80
      targetPort: 3000
